--- a/index.html
+++ b/index.html
@@ -726,7 +726,7 @@
       </div>
     </div>
     <!---------MOBILE MENU--------->
-    <div class="mobile-menu-wrapper">
+    <div class="mobile-menu-wrapper is-open">
       <div class="container mobile-menu-container">
         <button class="mobile-menu-close-btn" type="button">
           <svg 
@@ -752,7 +752,7 @@
         </nav>
         <address class="contacts-mobile-menu">
           <ul class="contacts-mobile-menu-list list">
-            <li>
+            <li class="menu-list-link-tel">
               <a class="contacts-mobile-menu-link tel link" href="tel:+110001111111">+11 (000) 111-11-11</a>
             </li>
             <li>
